--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,12 @@
   <%= @article.title %>
 </p>
 
+<p>Tag:
+  <% @article.tags.each do |tag| %>
+    <%= link_to tag.name, tag_path(tag) %>
+  <% end %>
+</p>
+
 <p>
   <strong>Body:</strong>
   <%= @article.body %>
